python-api/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: backend-app
  labels:
    app: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: fastapi-app:latest  
        ports:
        - containerPort: 8000
      livenessProbe: #Verification que l'application est en vie   
        httpGet:
          path: /health/live
          port: 8000
        initialDelaySeconds: 5
      readinessProbe: #Verification que l'application est prete
        httpGet:
          path: /health/ready
          port: 8000
        initialDelaySeconds: 3
        periodSeconds: 5


  # Init container POUR VERIFIER LA disponibilite de la base de donnees
