python-api/k8s/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: MySqlDb 
  namespace: backend-app
  labels:
    app: MySqlDb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: MySqlDb
  template:
    metadata:
      labels:
        app: MySqlDb
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - containerPort: 3306
