python-api/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: backend-app
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 8000              
      targetPort: 8000  
      NodePort: 30080        
    app: backend
