python-api/k8s/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: MySqlDb
spec:
  type: ClusterIP
  ports:
    - port: 3306
  selector:
    app: MySqlDb
