python-api/k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-database-access
  namespace: backend-app
spec:
  podSelector:
    matchLabels:
      app: MySqlDb
  policyTypes:
  - Ingress
  - from:
    - podSelector:
        matchLabels:
          app: backend
    ports:
    - protocol: TCP
      port: 3306
